# vinbot-trading

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vinbot.db
.agents/skills/binance-trading-api/: SKILL.md
app/: main.py
app/api/v1/: router.py
app/core/: config.py  database.py  metrics.py  observability.py  security.py
app/services/: account_manager.py  binance_client.py  bollinger_strategy.py  breakout_strategy.py  divergence_strategy.py  indicators.py  macd_strategy.py  market_data.py  notifications.py  persistence.py  regime_service.py  risk_manager.py  rsi_strategy.py  strategy_factory.py  trading_engine.py
data/: vinbot.db
monitoring/loki/: loki.yml  promtail.yml
monitoring/prometheus/: prometheus.yml
monitoring/tempo/: tempo.yml
openspec/changes/autonomous-regime-switching/: design.md  proposal.md  tasks.md
openspec/changes/bollinger-bands-strategy/: design.md  tasks.md
openspec/changes/dockerize-application/: design.md  proposal.md
openspec/changes/dynamic-atr-trailing-stop/: design.md  proposal.md
openspec/changes/dynamic-position-sizing/: design.md  proposal.md  tasks.md
openspec/changes/implement-notifications/: proposal.md
openspec/changes/implement-risk-management/: design.md  tasks.md
openspec/changes/implement-rsi-trading-strategy/: design.md  proposal.md  tasks.md
openspec/changes/implement-state-persistence/: tasks.md
openspec/changes/migrate-to-poetry/: proposal.md  tasks.md
openspec/changes/partial-take-profit/: proposal.md  tasks.md
(+70 files in other folders)
